--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,3 +13,9 @@ section {
 	display: flex;
 	justify-content: space-around;
 }
+
+div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
