--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+body {
+	display: flex;
+	flex-direction: column;
+}
+
 #draw {
 	display: none;
 }
@@ -18,4 +23,8 @@ div {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+h2 {
+	margin: auto;
 }
