--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,8 +3,21 @@ body {
 	flex-direction: column;
 }
 
+#deck {
+	background-color: rgb(97, 97, 194);
+	box-shadow: none;
+	color: white;
+	border-radius: 20px;
+	padding: 5px 15px;
+	/* border: none; */
+}
+
 #draw {
 	display: none;
+	background-color: red;
+	color: white;
+	border-radius: 20px;
+	padding: 5px 15px;
 }
 
 header {
@@ -23,8 +36,10 @@ div {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 20px;
 }
 
 h2 {
 	margin: auto;
+	padding: 30px;
 }
